--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,44 +1,52 @@
-name: push
-
+name: ci
 
 on:
   push:
+    branches:
+      - 'main'
     tags:
-      - '*'
+      - 'v*'
+    pull_request:
+      branches:
+        - 'main'
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  setup-build-publish-deploy:
-    name: Setup, Build and Publish
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-      -
-        name: Checkout 
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Login to Docker Hub
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Github Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      -
-        name: Set up Docker Build
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Extract Docker metadata
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v2
         with:
-          images: ${{ secrets.DOCKER_HUB_USERNAME }}/hetzner-ddns
-      -
-        name: Build and Push Docker Image
-        id: build-and-push
-        uses: docker/build-push-action@v3
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
         with:
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          context: .
           platforms: linux/amd64,linux/arm64
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
